@@ -1,6 +1,8 @@
 User johns
 Date:
 
+    Suspend can close/open X11 window, connection and audio device.
+
 User Morone
 Date: Sun Jan 22 16:43:23 CET 2012
 
